--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -46,7 +46,8 @@
               <div class="row">
                 <div class="col-md-12">
                   <div class="form-group">
-                    <%= f.select :city,  options_for_select([["Select", ""]] +  City.select(:city).uniq.map{|c| [c.city, c.city]},:selected => f.object.city), {}, :class=>"form-control"  %>
+                    <%= f.autocomplete_field :city, autocomplete_city_city_users_path, :class=>"form-control" %>
+  <%#= f.select :city,  options_for_select([["Select", ""]] +  City.select(:city).uniq.map{|c| [c.city, c.city]},:selected => f.object.city), {}, :class=>"form-control"  %>
                   </div>
                 </div>
               </div>
@@ -72,6 +73,7 @@
                   </section>
                 </div>
               </article>
+              <input type="submit" class="btn btn-primary" value="NEXT">
             </fieldset>
           </div>
           <span style="font-size:10px; margin-left:7.5em; color:#999; font-weight:bold;">CLICK ON YOUR PREFERED CITY BELOW TO DONATE OR SELECT A NEW CITY</span>
@@ -141,7 +143,6 @@
             </a>
           </li>
         </ul>
-        <input type="submit" class="btn btn-primary" value="NEXT">
       <% end %><br /><br />
     </div>
     <div class="col-md-4"></div>
