--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -124,7 +124,7 @@
                 <div class="col-md-7"><span style="font-size:10px; font-weight:bold;  color:#333; float:right;"><span style="color:#732013;">$<%= User.grep_users(" Champaign").sum("fair_price") == 0.0 ? 0 : User.grep_users(" Champaign").sum("fair_price")/User.grep_users(" Champaign").count %></span> AVERAGE MONTHLY PLEDGE</span></div>
               </div>
               <div class="row">
-                <div class="col-md-6"><span style="font-size:10px; font-weight:bold; color:#333;">MAPPING IN PROGRESS</span></div>
+                <div class="col-md-6"><span style="font-size:10px; font-weight:bold; color:#333;">#4 - GEOFENCE QUEUE</span></div>
                 <div class="col-md-6"><span style="font-size:10px; font-weight:bold; color:#333; float:right;"><span style="color:#2e3192;"><%= User.grep_users(" Champaign").count %></span> USERS COMMITTED TO CITY</span></div>
               </div>
             </a>
@@ -137,7 +137,7 @@
                 <div class="col-md-7"><span style="font-size:10px; font-weight:bold;  color:#333; float:right;"><span style="color:#732013;">$<%= User.grep_users(" Bloomington").sum("fair_price") == 0.0 ? 0 : User.grep_users(" Bloomington").sum("fair_price")/User.grep_users(" Bloomington").count %></span> AVERAGE MONTHLY PLEDGE</span></div>
               </div>
               <div class="row">
-                <div class="col-md-6"><span style="font-size:10px; font-weight:bold; color:#333;">MAPPING IN PROGRESS</span></div>
+                <div class="col-md-6"><span style="font-size:10px; font-weight:bold; color:#333;">#5 - GEOFENCE QUEUE</span></div>
                 <div class="col-md-6"><span style="font-size:10px; font-weight:bold; color:#333; float:right;"><span style="color:#2e3192;"><%= User.grep_users(" Bloomington").count %></span> USERS COMMITTED TO CITY</span></div>
               </div>
             </a>
