Modified auth and mailchip

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -43,6 +43,13 @@
           </li>
           <div class="contactForm">
             <fieldset>
+               <div class="row">
+                <div class="col-md-12">
+                  <div class="form-group">
+                    <%= f.email_field :email, :class=>"form-control", :placeholder => "Enter Email" %>
+                  </div>
+                </div>
+              </div>
               <div class="row">
                 <div class="col-md-12">
                   <div class="form-group">
