--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
               <% if params[:controller] == "users" and (params[:action] == "new" or params[:action] == "create") or (params[:controller] == "payments" and params[:action] == "new" or params[:action] == "create") %>
-                <li class="active"><a href="/users/">Home</a></li>
+                <li class="active"><a href="/users/">About</a></li>
               <% else %>
                 <li class="active"><a href="#start">Start</a></li>
                 <li><a href="#about">About</a></li>
