--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,9 +4,12 @@
       <h3>When every second counts, Conceal Alert answers the call.</h3>
 
       <h4><span style="color:#ffe015; font-weight:bold;">Respond to local paramedic and law enforcment emergencies. <br> Visualize local concealed-carry laws. Know your rights. Avoid fines.</span></h3>
+        <iframe src="//fast.wistia.net/embed/iframe/7uibn7qtlv?videoFoam=true" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen width="640" height="388"></iframe><script src="//fast.wistia.net/assets/external/iframe-api-v1.js"></script>
 
         <h4>We're lauching first in the State of Illinois. There are 26 off limits areas.<br>
-          Insted of getting confused, sign up now to tell us where to update maps next.</h4>
+          Insted of getting confused, sign up now to tell us where to update maps next.
+          <br>For only $XX more today, you can get your city into the top 5!
+        </h4>
 
         <h6><span style="#8c8e8f">GEOFENCING PRIORITY IS DETERMINED BY [1] USER SIZE & [2] FINANCIAL COMMITMENT</span></h6>
 
@@ -62,7 +65,7 @@
                 <div class="col-md-6" style="padding:0;" >
                   <section class="table-row">
                     <div class="table-cell">
-                      <%= f.text_field :fair_price, :class=>"form-control", :placeholder => "Enter price" %>
+                      <%= f.text_field :fair_price, :class=>"form-control", :placeholder => "Enter price", :value => "5" %>
                       <label class="control-label"><span style="font-size:10px; color:#FFF;">FAIR PRICE PER MONTH</span></label>
                     </div>
                     <div class="table-cell" style="padding-bottom:22px;">
@@ -74,7 +77,7 @@
                 <div class="col-md-5" style="padding:0;">
                   <section class="table-row">
                     <div class="table-cell">
-                      <%= f.text_field :one_time_donation,:class=>"form-control", :placeholder => "Enter price" %>
+                      <%= f.text_field :one_time_donation,:class=>"form-control", :placeholder => "Enter price", :value => "50" %>
                       <label class="control-label"><span style="font-size:10px; color:#FFF;">Optional One-Time Donation To Boost City In Map Queue</span></label>
                     </div>
                   </section>
