--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,23 +19,14 @@
 
     <header class="page-header text-center">
       <h1 class="page-title">About us</h1>
-
-      <h2>We create elegant solutions for everyday problems</h2>
     </header>
 
     <div class="row">
       <div class="col-md-4 col-md-push-2">
-        <p align="justify">Curabitur lacinia mi sem, in iaculis ligula blandit. Aenean ornare erat eget accumsan interdum. Purus vulputate. Nunc at orci venenatis, odio vel, egestas eros. Nullam ac est a ante faucibus. Sed est neque, laoreet at laoreet eget, iaculis vitae libero.</p>
-        <p align="justify">Donec faucibus ullamcorper pulvinar. Duis quis tempus varius, sapien urna pretium libero, nec mollis eros dolor eget velit. Nulla ornare ut nisi sodales consequat.</p>
-        <p align="justify">Duis ut posuere augue, a interdum nisi. Etiam libero sit amet tempus sodales, ante diam.</p>
+        <p align="justify">
+          It’s a patent-pending location-based emergency coordination platform.
+        </p>
       </div>
-
-      <div class="col-md-4 col-md-push-2">
-        <p align="justify">Phasellus eu tellus eget massa ultrices rhoncus. Quam massa, tincidunt semper sapien.</p>
-        <p align="justify">Posuere eleifend dolor. Vivamus purus ligula, venenatis nec elit at, tempus bibendum ipsum. Proin sed vehicula lectus. Curabitur augue diam, tincidunt venenatis lacinia, vulputate at lectus.</p>
-        <p align="justify">Donec tempus velit vitae quam sodales, sit amet augue malesuada sem adipiscing. Aliquam dolor urna, rhoncus quis ullamcorper vel.</p>
-      </div>
-
     </div>
 
   </div>
@@ -48,7 +39,9 @@
 
       <h2>What can we do for you?</h2>
 
-      <p class="larger">Mauris eget ligula vel nulla dignissim pharetra non sed orci. Praesent consequat egestas dapibus. Quisque faucibus erat at metus adipiscing lacinia.</p>
+      <p class="larger">We connect off duty law enforcement, paramedic and fire rescue assets.  When you call 911, you are only getting one of three shifts... meaning 33% capacity.We bring all assets to 100% utilization, based on the location of an emergency and an asset’s ability to respond quickly.
+        Our platform allows emergency teams to rapidly call and activate their other shifts during times of critical need, without lengthy phone calls or phone trees.
+        We offer better visibility, metrics and analytics to ensure that Commanders and dispatchers are able to more effectively deploy their assets.</p>
     </header>
 
     <div class="row">
