--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -57,7 +57,7 @@
                   <div class="form-group">
                     <%= f.autocomplete_field :city, autocomplete_city_city_users_path, :data => { :no_matches_label => 'Please enter cities from Illinois' }, :class=>"form-control" %>
   <%#= f.select :city,  options_for_select([["Select", ""]] +  City.select(:city).order(:city).uniq.map{|c| [c.city, c.city]},:selected => f.object.city), {}, :class=>"form-control"  %>
-                    <br>For only $XX more today, you can get your city into the top 5!
+                    <div id="city_top_text"></div>
                   </div>
                 </div>
               </div>
@@ -86,25 +86,25 @@
               <input type="submit" class="btn btn-primary" value="NEXT">
             </fieldset>
           </div>
-          <% unless  @high_cities.blank?  %>
+          <% unless !@high_cities.present?  %>
             <span style="font-size:10px; margin-left:7.5em; color:#999; font-weight:bold;">CLICK ON YOUR PREFERED CITY BELOW TO DONATE OR SELECT A NEW CITY</span>
-          <% end %>
-          <% i = 0 %>
-          <% @high_cities.each do |hc|  %>
-            <li onclick="ChangeValue(this)" style="text-transform: uppercase;">
-              <%= f.radio_button :city, "#{hc.city}" %>
-              <a href="#tab2" data-toggle="tab">
-                <div class="row" style="height:20px;">
-                  <div class="col-md-5"><span style="font-size:18px; font-weight:bold; color:#333;"><%= hc.city %>, IL</span></div>
-                  <div class="col-md-7"><span style="font-size:10px; font-weight:bold;  color:#333; float:right;"><span style="color:#732013;">$<%= hc.avg_price %></span> AVERAGE MONTHLY PLEDGE</span></div>
-                </div>
-                <div class="row">
-                  <div class="col-md-6"><span style="font-size:10px; font-weight:bold; color:#333;">#<%= i + 1 %> - GEOFENCE QUEUE</span></div>
-                  <div class="col-md-6"><span style="font-size:10px; font-weight:bold; color:#333; float:right;"><span style="color:#2e3192;"><%= hc.users_count %></span> USERS COMMITTED TO CITY</span></div>
-                </div>
-              </a>
-            </li>
-            <% i = i + 1 %>
+            <% i = 0 %>
+            <% @high_cities.each do |hc|  %>
+              <li onclick="ChangeValue(this)" style="text-transform: uppercase;">
+                <%= f.radio_button :city, "#{hc.city}" %>
+                <a href="#tab2" data-toggle="tab">
+                  <div class="row" style="height:20px;">
+                    <div class="col-md-5"><span style="font-size:18px; font-weight:bold; color:#333;"><%= hc.city %>, IL</span></div>
+                    <div class="col-md-7"><span style="font-size:10px; font-weight:bold;  color:#333; float:right;"><span style="color:#732013;">$<%= hc.avg_price %></span> AVERAGE MONTHLY PLEDGE</span></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6"><span style="font-size:10px; font-weight:bold; color:#333;">#<%= i + 1 %> - GEOFENCE QUEUE</span></div>
+                    <div class="col-md-6"><span style="font-size:10px; font-weight:bold; color:#333; float:right;"><span style="color:#2e3192;"><%= hc.users_count %></span> USERS COMMITTED TO CITY</span></div>
+                  </div>
+                </a>
+              </li>
+              <% i = i + 1 %>
+            <% end %>
           <% end %>
         </ul>
       <% end %><br /><br />
@@ -119,3 +119,17 @@
     display: none;
   }
 </style>
+
+<script>
+  $(document).ready(function() {
+    $('#user_city').focusout(function() {
+      $.ajax({
+        url: "/users/" + $(this).val() + "/change_top_value",
+        type: "POST",
+        sucess: function(data) {
+
+        }
+      })
+    });
+  });
+</script>
